pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleAmendsVersionCheck2.pkl
@ModuleInfo { minPklVersion = "99.9.9" }
amends "baseModule.pkl"
